# bot-antispam

./: .gitignore  docker-compose-dev.yml  docker-compose.yml
bot/: Dockerfile  pyproject.toml
bot/src/: config.py  constats.py  local_bad_phrases.txt  main.py  settings.py
bot/src/censure/data/: ru_in.txt
bot/src/filters/: debug_router.py
bot/src/handlers/: debug_print_handler.py  find_location_dev.py
bot/src/middlewares/: anti_flood_middleware.py  profanity_filter_middleware.py  sibscription_middleware.py
